[package]
name = "grate_machine"
version = "0.1.0"
authors = ["William Terry <Tezza48is@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy", branch="master"}
# bevy_rapier2d = "0.1.1"
rand = "*"